HIVE-28351: TestStreaming to run on Tez